--- a/rtP2PLibrary/build.gradle
+++ b/rtP2PLibrary/build.gradle
@@ -4,9 +4,10 @@ group='com.github.jorkyin'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -42,7 +43,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     /**********jsonw*************/
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
